# Luizalabs_Backend_python

./: .gitattributes  .gitignore  README.md  desafio.py  desafio_banco.py  pyproject.toml
.github/workflows/: tests.yml
Classe e Objetos/: atributos_classe_instancia.py  bicicletaria.py  classe_abstrata.py  construtores_destrutores.py  contrutores_destrutores.py  encapsulamento_banco.py  encapsulamento_foo.py  encapsulamento_pessoa.py  heranca_multipla.py  herença_simples.py  metodos_estaticos.py  polimorfismo.py
aulas introdutorias/: convertendo_tipos.py  estrutura_condicional.py  extrutura_repeticao.py  identacao_blocos.py  operadores_aritmeticos.py  operadores_associacao.py  operadores_atribuicao.py  operadores_identidade.py  operadores_logicos.py  print_input.py  string.py  variaveis_constantes.py
banco de dados/: db_api.py  injecao_sql.py  transacao.py
dio_blog/: blog.db  database.py  main.py  pyproject.toml  security.py
dio_blog/controllers/: auth.py  post.py
dio_blog/models/: post.py
dio_blog/schemas/: post.py
dio_blog/service/: post.py
dio_blog/src/: exemplos.py  main.py
dio_blog/src/controllers/: post.py
dio_blog/src/models/: post.py
dio_blog/src/service/: post.py
dio_blog/tests/: conftest.py
dio_blog/tests/integration/controllers/auth/: test_login.py
dio_blog/tests/integration/controllers/post/: test_delete.py  test_read_all.py  test_read_post.py
dio_blog/views/: post.py
endpoints/: opencollection.yml
endpoints/auth/: login.yml
endpoints/environments/: Local-FastAPI.yml  localhost.yml
endpoints/post async/: create post.yml  delete.yml  folder.yml  read all.yml  read id.yml  update.yml
endpoints/post async local/: create post.yml  delete.yml  folder.yml  read all.yml  read id.yml  update.yml
endpoints/posts/: create.yml  read all cookie.yml  read all header.yml  read all.yml
estrutura de dados/: dicionarios.py  lista.py  tuplas.py
src/: database.py  main.py
src/banco/: main.py
src/controllers/: account.py  auth.py  client.py  transaction.py
src/core/: config.py  security.py
src/database/: connection.py
src/exceptions/: business.py
tests/: conftest.py
(+59 files in other folders)
