[project]
name = "desafio-banco"
version = "0.0.1"
description = "Desafio de banco de dados para um banco"
authors = [
    {name = "Caio da Silva",email = "caiosil.viana@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.0,<0.137.0)",
    "uvicorn[standard] (>=0.45.0,<0.46.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "psycopg2-binary",
    "databases[aiosqlite,asyncpg]",
    "pydantic-settings (>=2.14.0,<3.0.0)",
]
[tool.poetry]
packages = [{include = "banco", from = "src"}]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]
