[project]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Caio da Silva",email = "caiosil.viana@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn[standard] (>=0.44.0,<0.45.0)",
    "databases[aiosqlite] (>=0.9.0,<0.10.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "src"}]

[tool.pytest.ini_options]
asyncio_mode = "auto"
norecursedirs = ["__pycache__", ".venv", ".pytest_cache"]

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]
